--- a/plugins/mcreator-localization/lang/texts.properties
+++ b/plugins/mcreator-localization/lang/texts.properties
@@ -1195,7 +1195,9 @@ blockly.block.text_format_number.as=as:
 blockly.block.text_trim=Trim text:
 blockly.block.text_uppercase=Uppercase text:
 blockly.block.text_lowercase=Lowercase text:
+blockly.block.text_starts_with_in=Does text:
 blockly.block.text_starts_with.check=start with:
+blockly.block.text_ends_with=Does text:
 blockly.block.text_ends_with.check=end with:
 blockly.block.time_to_formatted_string=Time as formatted text
 blockly.block.return=Return
